# invenio-vocabularies-extra

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.tx/: config
invenio_vocabularies_extra/: __init__.py  config.py  ext.py  jobs.py
invenio_vocabularies_extra/contrib/subjects/: config.py
invenio_vocabularies_extra/contrib/subjects/ddc/: __init__.py  datastreams.py
invenio_vocabularies_extra/contrib/subjects/gnd/: __init__.py  datastreams.py
invenio_vocabularies_extra/contrib/subjects/mesh/: __init__.py  datastreams.py
invenio_vocabularies_extra/data/: ddc.yaml
invenio_vocabularies_extra/datastreams/: __init__.py  readers.py
tests/: conftest.py  test_invenio_vocabularies_extra.py  test_transformers.py
