# -*- coding: utf-8 -*-
#
# Copyright (C) 2025 University of Münster.
#
# invenio-vocabularies-extra is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
name = invenio-vocabularies-extra
version = attr: invenio_vocabularies_extra.__version__
description = "Add some extras to the vocabularies module like DDC and GND subjects."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = University of Münster
author_email = forschungsdaten@uni-muenster.de
platforms = any
url = https://github.com/ulbmuenster/invenio-vocabularies-extra
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-base>=2.0.0
    invenio-oaipmh-scythe>=0.13.0
    invenio-vocabularies>=7.0.0.dev2
    arrow>=1.3.0
    lxml>=5.3.0

[options.extras_require]
tests =
    pytest<=7.1.3,<8.0.0
    pytest-black-ng>=0.4.0
    invenio-app>=2.0.0,<3.0.0
    invenio-search>=3.0.0,<4.0.0
    pytest-invenio>=3.0.0,<4.0.0
    Sphinx>=4.5.0
    opensearch-dsl>=2.1.0

# TODO: Check if the module uses search
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    invenio_vocabularies_extra = invenio_vocabularies_extra:InvenioExtraVocabularies
invenio_jobs.jobs =
    process_ddc_subjects = invenio_vocabularies_extra.jobs:ProcessDDCJob
    process_gnd_subjects = invenio_vocabularies_extra.jobs:ProcessGNDSubjectsJob
    import_gnd_subjects = invenio_vocabularies_extra.jobs:ImportCompleteGndSubjectsJob


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --cov=invenio_vocabularies_extra --cov-report term --cov-report xml:coverage.xml --junitxml=report.xml
testpaths = tests invenio_vocabularies_extra

[compile_catalog]
directory = invenio_vocabularies_extra/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = University of Münster
msgid_bugs_address = forschungsdaten@uni-muenster.de
mapping-file = babel.ini
output-file = invenio_vocabularies_extra/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_vocabularies_extra/translations/messages.pot
output-dir = invenio_vocabularies_extra/translations/

[update_catalog]
input-file = invenio_vocabularies_extra/translations/messages.pot
output-dir = invenio_vocabularies_extra/translations/
